# arsip_kelurahan1

./: .env.example  .gitignore  README.md  arsip2.sql  gunicorn.conf.py  pyproject.toml  requirements.txt  run.py  wsgi.py
api/: config.py  index.py
api/static/uploads/: 6e4b3b2d4b3e441abf783dcfd43f5055_skripsi_tamtam.docx
api/templates/: admin_archive_management.html  admin_system_settings.html  archive_detail.html  archive_list.html  archive_upload.html  dashboard.html
arsip/: app.py  requirements.txt
arsip/logs/: arsip_kelurahan.log.1
arsip/static/js/: archive.js
arsip/templates/: base.html
arsip_flask/: __init__.py  extensions.py
arsip_flask/config/: __init__.py  base.py  development.py  preview.py  production.py  testing.py
arsip_flask/static/js/: profile.js
arsip_flask/templates/: activity.html  admin_user_management.html  profile.html
arsip_flask/templates/auth/: login.html
arsip_flask/utils/: database.py  logging.py
arsip_kelurahan/logs/: arsip_kelurahan.log.2
arsip_kelurahan/static/js/: search.js
arsip_kelurahan/templates/: admin_dashboard.html
